<resources>
    <string name="app_name">Daisy</string>
    <string name="toolbar_hint">Search or enter address</string>
    <string name="menu_action_add_tab">Add New Tab</string>
    <string name="menu_action_close_tabs">Close All Tabs</string>
    <string name="menu_action_close_tabs_private">Close Private Tabs</string>
    <string name="preferences_sign_in_summary">Sync your tabs and history</string>
    <string name="preferences_pair_sign_in_summary">Pair with Firefox Desktop</string>
    <string name="preferences_use_telemetry_summary">Send usage data</string>
    <string name="preferences_make_default_browser">Make default browser</string>
    <string name="preferences_sync_history">History</string>
    <string name="preferences_sync_tabs">Open tabs</string>
    <string name="preferences_remote_debugging">Remote debugging via USB</string>
    <string name="preferences_tracking_protection_normal">Enable in Normal Browsing Mode</string>
    <string name="preferences_tracking_protection_private">Enable in Private Browsing Mode</string>
    <string name="preferences_about_page">About Reference Browser</string>
    <string name="sign_in">Sign in</string>
    <string name="pair_sign_in">Sign in with a QR code</string>
    <string name="firefox_account">Firefox Account</string>
    <string name="sign_out">Sign out</string>
    <string name="sync_now">Sync now</string>
    <string name="syncing">Syncing</string>
    <string name="preferences_sync_failed_summary">Sync failed. Last success: %s</string>
    <string name="preferences_sync_failed_never_synced_summary">Sync failed. Last synced: never</string>
    <string name="preferences_sync_last_synced_summary">Last synced: %s</string>
    <string name="preferences_sync_never_synced_summary">Last synced: never</string>
    <string name="privacy">Privacy</string>
    <string name="preferences_privacy_summary">Tracking, cookies, data choices</string>
    <string name="sync_category">Choose what to sync</string>
    <string name="open_links_in_apps">Open links in apps</string>
    <string name="developer_tools_category">Developer tools</string>
    <string name="use_telemetry">Use Telemetry</string>
    <string name="mozilla_category">Mozilla</string>
    <string name="tracker_category">Tracking Protection</string>
    <string name="data_choices_category">Data Choices</string>
    <string name="preferences_show_news_view">Show News</string>
    <string name="settings">Settings</string>
    <string name="synced_tabs">Synced Tabs</string>
    <string name="account_settings">Account Settings</string>
    <string name="privacy_settings">Privacy Settings</string>
    <string name="pair_preferences">Pairing</string>
    <string name="pair_instructions">Open firefox.com/pair in Firefox Desktop for your pairing code</string>
    <string name="private_browsing_title">Private Browsing</string>
    <string name="private_browsing_body"><![CDATA[
<h1>Private Browsing</h1>
<p>When you browse in a Private Window, Reference Browser <strong>does not save</strong>:</p>
<ul class="two-column">
    <li>visited pages</li>
    <li>searches</li>
    <li>cookies</li>
    <li>temporary files</li>
</ul>
<p>Private Browsing <strong>doesn\'t make you anonymous</strong> on the Internet. Your employer or Internet service provider can still know what page you visit.</p>
<p class="about-info">Learn more about <a id="learnMore">Private Browsing</a>.</p>
     ]]></string>
    <string name="datareporting_notification_title">Reference Browser</string>
    <string name="datareporting_notification_summary">To improve your experience, Reference Browser automatically sends some information to Mozilla.</string>
    <string name="default_notification_channel">Browser</string>
    <string name="about_content"><![CDATA[
<p>%1$s puts you in control.</p>
<p>%1$s is produced by Cliqz.<br/>
    ]]></string>
    <string name="menu_share_with">Share with…</string>
    <string name="toast_copied">Copied!</string>
    <string name="toolbar_menu_item_forward">Forward</string>
    <string name="toolbar_menu_item_refresh">Refresh</string>
    <string name="toolbar_menu_item_stop">Stop</string>
    <string name="toolbar_menu_item_bookmark">Bookmark</string>
    <string name="toolbar_menu_item_remove_bookmark">Remove bookmark</string>
    <string name="toolbar_menu_item_new_tab">New Tab</string>
    <string name="toolbar_menu_item_forget_tab">New Forget Tab</string>
    <string name="toolbar_menu_item_share">Share</string>
    <string name="toolbar_menu_item_request_desktop_site">Request desktop site</string>
    <string name="toolbar_menu_item_add_to_homescreen">Add to Homescreen</string>
    <string name="toolbar_menu_item_find_in_page">Find in Page</string>
    <string name="toolbar_menu_item_report_issue">Report issue</string>
    <string name="toolbar_menu_item_settings">Settings</string>
    <string name="toolbar_menu_item_history">History</string>
    <string name="toolbar_menu_item_bookmarks">Bookmarks</string>
    <string name="toolbar_menu_item_clear_data">Clear Data</string>
    <string name="history_title_untitled">Untitled</string>
    <string name="history_clear_all">Delete Browsing History</string>
    <string name="history_clear_all_dialog_title">Delete History?</string>
    <string name="history_clear_all_dialog_msg">You are about to delete your history. The action will also delete most visited pages on the new tab.</string>
    <string name="history_clear_all_dialog_positive_btn">Delete</string>
    <string name="history_clear_all_dialog_negative_btn">Cancel</string>
    <string name="no_history_available">You have no history.\nTip: Websites visited in Forget mode\nwill never be saved in History.</string>
    <string name="history_screen_title">History</string>
    <plurals name="history_items_selected">
        <item quantity="one">%1$d selected</item>
        <item quantity="other">%1$d selected</item>
    </plurals>
    <string name="history_menu_delete_button">Delete</string>
    <string name="history_menu_open_in_new_tab">Open in New tab</string>
    <string name="history_menu_open_in_private_tab">Open in Private tab</string>
    <string name="history_today">Today \u2013 %s </string>
    <string name="history_yesterday">Yesterday \u2013 %s</string>
    <string name="history_search_hint">Search in History</string>
    <string name="history_close_search">Close History Search</string>
    <string name="history_clear_search">Clear Search</string>
    <string name="bookmark_added_snackbar_text">Bookmark added</string>
    <string name="bookmark_added_snackbar_edit_action">EDIT</string>
    <string name="bookmarks_view_empty_text">Tip: When you visit a website\nyou can easily bookmark it by tapping\nthe star icon in the three dots menu.</string>
    <string name="bookmarks_screen_title">Bookmarks</string>
    <string name="bookmarks_search_hint">Search in Bookmarks</string>
    <plurals name="bookmark_items_selected">
        <item quantity="one">%1$d selected</item>
        <item quantity="other">%1$d selected</item>
    </plurals>
    <string name="bookmark_menu_edit_button">Edit</string>
    <string name="bookmark_menu_open_in_new_tab_button">Open in New Tab</string>
    <string name="bookmark_menu_open_in_private_tab_button">Open in Private Tab</string>
    <string name="bookmark_menu_delete_button">Delete</string>
    <string name="bookmarks_folder_root">Bookmarks</string>
    <string name="bookmark_add_folder_title">Add Folder</string>
    <string name="bookmark_edit_folder_title">Edit Folder</string>
    <string name="bookmark_edit_bookmark_title">Edit Bookmark</string>
    <string name="bookmark_edit_title_label">Title (Required)</string>
    <string name="bookmark_edit_url_label">Url</string>
    <string name="bookmark_edit_parent_folder_label">Choose Parent Folder</string>
    <string name="bookmark_empty_title_error">Must have a title</string>
    <string name="bookmark_add_folder">Add Folder</string>
    <string name="bookmark_select_folder_title">Choose parent folder</string>
    <string name="search_widget_text_long">Search or type web address</string>
    <string name="search_widget_text_short">Search </string>
    <string name="preferences_delete_browsing_data_browsing_data_open_tabs_title">Open Tabs</string>
    <string name="preferences_delete_browsing_data_browsing_data_history_title">History</string>
    <string name="preferences_delete_browsing_data_browsing_data_cookies_title">Cookies &amp; Active logins</string>
    <string name="preferences_delete_browsing_data_browsing_data_cache_title">Cache</string>
    <string name="preferences_delete_browsing_data_browsing_data_site_settings_title">Site settings</string>
    <string name="delete_browsing_data_dialog_title">Clear Private Data</string>
    <string name="delete_browsing_data_dialog_positive_btn">Clear Now</string>
    <string name="delete_browsing_data_dialog_negative_btn">Cancel</string>
    <string name="delete_browsing_data_deleted_msg">Private data deleted</string>
    <string name="top_site_menu_open_in_new_tab">Open in New tab</string>
    <string name="top_site_menu_open_in_private_tab">Open in Private tab</string>
    <string name="top_site_menu_remove_from_top_site">Hide from New tab</string>
    <string name="browser_toolbar_long_press_popup_copy">Copy</string>
    <string name="browser_toolbar_long_press_popup_paste_and_go">Paste &amp; Go</string>
    <string name="browser_toolbar_long_press_popup_paste">Paste</string>
    <string name="browser_toolbar_url_copied_to_clipboard_toast">URL copied to clipboard</string>
    <string name="empty_string" translatable="false"></string>
    <string name="fxa_received_tab_channel_name">Received tabs</string>
    <string name="fxa_received_tab_channel_description">Notifications for tabs received from other Firefox devices.</string>
    <string name="fxa_tab_received_notification_name">Tab Received</string>
    <string name="fxa_tab_received_from_notification_name">Tab from %s</string>
    <string name="freshtab_title">Home</string>
</resources>