<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ This Source Code Form is subject to the terms of the Mozilla Public
  ~ License, v. 2.0. If a copy of the MPL was not distributed with this
  ~ file, You can obtain one at http://mozilla.org/MPL/2.0/.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/delete"
        android:icon="@drawable/mozac_ic_delete"
        android:title="@string/history_menu_delete_button"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/open_in_new_tab"
        android:title="@string/history_menu_open_in_new_tab"
        app:showAsAction="never" />

    <item
        android:id="@+id/open_in_private_tab"
        android:title="@string/history_menu_open_in_private_tab"
        app:showAsAction="never" />
</menu>